# poi-curator

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/admin/: README.md
apps/api/poi_curator_api/: __init__.py  api.py  dependencies.py  main.py
data/fixtures/: README.md  eval_santa_fe.json  overpass_santa_fe_sample.json  routes_santa_fe.json
docs/: METHODOLOGY.md  POI_CURATOR_MANUAL_MAP_QA.md
docs/planning/: IMPLEMENTATION_PLAN.md  PRD.md  README.md  SOURCE_ECOLOGY_AND_ANCHOR_PLAN.md  TECH_SPEC.md  TOOLING_AND_AGENTS.md
infra/docker/: README.md
migrations/: env.py
migrations/versions/: 20260401_0001_initial_schema.py  20260401_0002_source_integrity_and_affinity_hints.py  20260403_0003_source_registry_and_evidence.py  20260404_0004_aliases_and_match_diagnostics.py  20260404_0005_diagnostic_resolution_fields.py  20260405_0006_theme_membership_tables.py  20260406_0007_activate_rail_query_theme.py  20260406_0008_theme_editorial_review_metadata.py  20260408_0009_history_anchor_identity_overrides.py
reports/: nearby-railyard-rail.json  nearby-railyard-rail.md  santa_fe_eval_report.md
reports/check_runs/20260407T125409Z/: index.md  rail-smoke.json  rail-smoke.md
reports/reviews/: 20260407T123552Z_nearby-railyard-rail.json
scripts/: run_check_suite.py
tests/golden_routes/: test_scoring_stub.py
tests/integration/: README.md  test_db_query_paths.py
tests/unit/: test_admin_editorial.py  test_api.py  test_audit.py  test_categories.py  test_check_suites.py  test_checks.py  test_city_gis_enrichment.py  test_db_point_scoring.py  test_db_route_scoring.py  test_descriptions.py  test_evaluation.py  test_historic_register.py  test_nearby_engine.py  test_osm_normalize.py  test_shared_scoring.py  test_theme_service.py  test_wikidata_enrichment.py  test_xlsx_reader.py
(+197 files in other folders)
