[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poi-curator"
version = "0.1.0"
description = "Route-aware, culturally informed POI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "geoalchemy2>=0.15,<1.0",
  "httpx>=0.27,<1.0",
  "orjson>=3.10,<4.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "pyproj>=3.6,<4.0",
  "shapely>=2.0,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2.0",
  "pre-commit>=3.8,<4.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "testcontainers[postgres]>=4.8,<5.0",
]

[project.scripts]
poi-curator-api = "poi_curator_api.main:serve"
poi-curator-ingest = "poi_curator_ingestion.cli:app"
poi-curator-enrich = "poi_curator_enrichment.cli:app"
poi-curator-eval = "poi_curator_scoring.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  "apps/api",
  "packages/domain",
  "packages/scoring",
  "packages/ingestion",
  "packages/enrichment",
  "packages/editorial",
]
include = ["poi_curator*"]

[tool.setuptools.package-data]
poi_curator_api = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["shapely.*"]
ignore_missing_imports = true
